--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,4 +96,6 @@ dependencies {
     implementation 'androidx.browser:browser:1.3.0'
     compileOnly 'com.google.android.wearable:wearable:2.5.0'
 
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
 }
