--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,4 +98,12 @@ dependencies {
 
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
+    //page
+    def paging_version = "3.0.0-alpha12"
+    implementation "androidx.paging:paging-runtime:$paging_version"
+    // optional - Guava ListenableFuture support
+    implementation "androidx.paging:paging-guava:$paging_version"
+    // Jetpack Compose Integration
+    implementation "androidx.paging:paging-compose:1.0.0-alpha08"
+
 }
