--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,4 +109,12 @@ dependencies {
     //lottie
     implementation "com.airbnb.android:lottie:3.6.1"
 
+
+    def room_version = "2.2.5"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    implementation "androidx.room:room-ktx:$room_version"
+
 }
